<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>StateEstimator</name>
  <version>0.0.0</version>
  <description>StateEstimator package</description>

  <maintainer email="jintian.ge@qq.com">GJT</maintainer>
  <license>TODO</license>
  <build_depend>ros_environment</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <depend>libpcl-all</depend> -->
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>  
  <!-- <depend >cv_bridge</depend> -->
  <depend>laser_geometry</depend>
  <!-- <depend>pcl_conversions</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>  
  <!-- <depend>libpcl-all-dev</depend> -->
  <!-- <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> -->
  <depend>geometry_msgs</depend>
  <depend>a2rl_bs_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>
  <!-- <depend>tf2_eigen</depend> -->
  <depend>tf2_eigen</depend>


  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>